Fix footer-links spacing

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -10886,6 +10886,9 @@ a.skip-link {
 .btn-primary, .btn-secondary {
   color: #ffffff !important; }
 
+body {
+  -webkit-font-smoothing: antialiased; }
+
 h6 {
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
@@ -10908,14 +10911,6 @@ h1 {
 .wpcf7 input[type=submit] {
   font-family: "Comfortaa", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
-#page {
-  min-height: 100%;
-  padding-bottom: 1rem;
-  margin-bottom: 0 !important;
-  margin-top: 0px;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important; }
-
 /** Footer */
 #page-footer a {
   text-decoration: none; }
@@ -10925,9 +10920,6 @@ h1 {
   height: 30px; }
 
 #page-footer .nav-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   padding: 0;
   margin-right: .5rem; }
 
